Implememnt observer pattern to map observer and refactor files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ add_executable(A1-map
         Observer/Observable.h
         Observer/CharacterObserver/CharacterDisplay.cpp
         Observer/CharacterObserver/CharacterDisplay.h
+        Observer/MapObserver/MapObserver.cpp
+        Observer/MapObserver/MapObserver.h
+        Utils/utils.h
+        Utils/utils.cpp
 )
 
 add_executable(A1-Character
@@ -85,6 +89,16 @@ add_executable(
         Tests/Map/MapTest.h
         Tests/Map/CellTest.cpp
         Tests/Map/CellTest.h
+        Observer/Observable.cpp
+        Observer/Observable.h
+        Observer/Observer.cpp
+        Observer/Observer.h
+        Observer/CharacterObserver/CharacterDisplay.cpp
+        Observer/CharacterObserver/CharacterDisplay.h
+        Utils/utils.h
+        Utils/utils.cpp
+
+
 )
 add_executable(CharacterObserver
         CharacterObserverDriver.cpp
