added turn based for player, need to add Attack and enemy/friendly movement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 # Add the current directory to the list of paths that CMake uses to find modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}")
-#set(CPPUNIT_INCLUDE_DIR "C:/Users/RJ/Desktop/cppunit/CppUnit/include")
-#set(CPPUNIT_LIBRARY "C:/Users/RJ/Desktop/cppunit/CppUnit/lib/cppunit.lib")
+set(CPPUNIT_INCLUDE_DIR "C:/Users/RJ/Desktop/cppunit/CppUnit/include")
+set(CPPUNIT_LIBRARY "C:/Users/RJ/Desktop/cppunit/CppUnit/lib/cppunit.lib")
 
 # Now CMake should be able to find and use your custom FindCppUnit.cmake module
 find_package(CppUnit REQUIRED)
