--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,5 +181,19 @@ add_executable(altDriver
 		${COMMON_SOURCES}
 		altDriver.cpp
 )
+
+add_executable(ItemLoadDriver
+		${COMMON_SOURCES}
+		ItemLoadDriver.cpp
+)
+
+add_executable(GameDriver
+		${COMMON_SOURCES}
+		Game/Game.h
+		Game/Game.cpp
+		GameDriver.cpp
+)
+
+
 # Link the CppUnit library
 target_link_libraries(COMP345_A1_Tests ${CPPUNIT_LIBRARIES})
